[front-end]:update default error page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -25,6 +25,27 @@
       font-size: 72px;
       margin-bottom: 20px;
     }
+.button {
+      display: inline-block;
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      padding: 10px 20px;
+      background-color: #00f;
+      color: #fff;
+      text-decoration: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    .button:hover {
+      text-decoration: none;
+    }
+
+.button a{
+	color:white;
+	text-decoration: none;
+}
   </style>
 </head>
 <body>
@@ -32,6 +53,6 @@
   <h1>Oops! Something went wrong.</h1>
   <p>We're sorry, but an error has occurred.</p>
   <p>Please try again later or contact support.</p>
-<p>Please try again later or <a href="index.html">contact support</a>.</p>
+   <button class="button"><a href="index.html" >Go Home</a></button>
 </body>
 </html>
