--- a/src/main/resources/templates/loginfailed.html
+++ b/src/main/resources/templates/loginfailed.html
@@ -46,7 +46,7 @@
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             }
 
-            @media (max-width: 700px) {
+            @media (max-width: 580px) {
                 .container {
                     width: 100%;
                     padding: 20px;
@@ -63,7 +63,18 @@
                 body {
                     display: block;
                 }
+                .position .logoo{
+                	display: block;
+                	width: 105px;
+                	height: 135px;
+                	background-size: cover;
+                	border-radius: 50%;
+                	position: absolute;
+                	top:5px;
+                	left:33.5%;
+                }
             }
+            
 
             input[type="text"], input[type="password"] {
                 width: 100%;
