--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,6 +63,16 @@
                 body {
                     display: block;
                 }
+                .position .logoo{
+                	display: block;
+                	width: 105px;
+                	height: 135px;
+                	background-size: cover;
+                	border-radius: 50%;
+                	position: absolute;
+                	top:5px;
+                	left:33.5%;
+                }
             }
 
             input[type="text"], input[type="password"] {
