[back-end]: push view profile function - reconstruct update profile function 12:47p.m 27/10/23

--- a/src/main/resources/templates/viewforum.html
+++ b/src/main/resources/templates/viewforum.html
@@ -369,7 +369,7 @@
                     <li onclick="changeBackgroundColor(this)">&#128222; Contact</li>
                     <li onclick="changeBackgroundColor(this)">&#129300; Software comparisons</li>
                     <li onclick="changeBackgroundColor(this)">&#128214; Guides</li>
-                    <li onclick="changeBackgroundColor(this)">&#128100; <a th:href="@{/profile_user}">View Profile</a></li>
+                    <li onclick="changeBackgroundColor(this)">&#128100; <a href="viewprofile">View Profile</a></li>
                     <li onclick="changeBackgroundColor(this)">&#128682; <a href="logout">Logout</a></li>
                 </ul>
             </div>
