[front-end] update responsive profile for mobile 12:17a.m 28/10/2023

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -125,7 +125,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             .search1{
                 height:200px;
             }
-            
+
             h1 {
                 text-align: center;
                 font-size: 30px;
@@ -153,6 +153,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 .container{
                     margin-top:30px;
                     padding-bottom: 60px;
+                }
+                .right{
+                    width:80%;
+                }
+                .right span{
+                    text-align: left;
+                    margin-right:110px;
                 }
             }
         </style>
