[front-end] small bug (view profile navigation) 2.22a.m 28/10/23

--- a/src/main/resources/templates/profileaccount.html
+++ b/src/main/resources/templates/profileaccount.html
@@ -360,6 +360,10 @@
             .headermb {
                 display: none;
             }
+            
+            .section3  {
+                padding-top: 15px;
+            }
 
             /* CSS cho giao diện mobile */
             @media screen and (max-width: 767px) {
