--- a/src/main/resources/templates/landing_profile.html
+++ b/src/main/resources/templates/landing_profile.html
@@ -601,141 +601,199 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 height:300px;
                 resize: none;
             }
+
+            .bodyy {
+                background-color: #f2f2f2;
+                font-family: Arial, sans-serif;
+                text-align: center;
+                padding-top: 100px;
+                padding-bottom:350px;
+            }
+
+            .wrong {
+                color: #ff6347;
+                font-size: 48px;
+                margin-bottom: 20px;
+            }
+
+            p {
+                color: #696969;
+                font-size: 24px;
+            }
+
+            .emoji {
+                font-size: 72px;
+                margin-bottom: 20px;
+            }
+            .button2 {
+                display: inline-block;
+                font-size: 16px;
+                font-weight: bold;
+                text-align: center;
+                padding: 10px 20px;
+                background-color: #00f;
+                color: #fff;
+                text-decoration: none;
+                border: none;
+                cursor: pointer;
+            }
+
+            .button2:hover {
+                text-decoration: none;
+            }
+
+            .button2 a{
+                color:white;
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
-        <!-- =============== Navigation ================ -->
-        <div class="container">
-            <div class="navigation">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <span class="icon">
-                                <ion-icon name=""></ion-icon>
-                            </span>
-                            <span class="title">ADMIN DASHBOARD</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="landingpage">
-                            <span class="icon">
-                                <ion-icon name="people-outline"></ion-icon>
-                            </span>
-                            <span class="title">Member Management</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="landingsystem">
-                            <span class="icon">
-                                <ion-icon name="help-outline"></ion-icon>
-                            </span>
-                            <span class="title">System Management</span>
-                        </a>
-                    </li>
-
-                    <!--                <li>
-                                        <a th:href="@{/homepage}">
-                                            <span class="icon">
-                                                <ion-icon name="chatbubble-outline"></ion-icon>
-                                            </span>
-                                            <span class="title">HomePage</span>
-                                        </a>
-                                    </li>-->
-
-                    <!--                <li>
-                                        <a href="#">
-                                            <span class="icon">
-                                                <ion-icon name="settings-outline"></ion-icon>
-                                            </span>
-                                            <span class="title">Settings</span>
-                                        </a>
-                                    </li>-->
-
-                    <li>
-                        <a href="landingprofile">
-                            <span class="icon">
-                                <ion-icon name="lock-closed-outline"></ion-icon>
-                            </span>
-                            <span class="title">Security Profile</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="logout">
-                            <span class="icon">
-                                <ion-icon name="log-out-outline"></ion-icon>
-                            </span>
-                            <span class="title">Sign Out</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="main">
-                <div class="topbar">
-                    <div class="toggle">
-                        <ion-icon name="menu-outline"></ion-icon>
-                    </div>
-
-                    <div class="search">
-                        <label>
-                            <input type="text" placeholder="Search here">
-                            <ion-icon name="search-outline"></ion-icon>
-                        </label>
-                    </div>
-
-                    <div class="user">
-                        <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
-                    </div>
-                </div>
-
-                <!-- ======================= Title ======================== -->
-                <div class="chartsBx1">
-                    <div></div>
-                    <div>
-                        <h1 class="chart">YOUR PROFILE</h1>
-                    </div>
-                    <div></div>
-                </div>
-
-                <!-- ================ View Profile Admin ================= -->
-                <div class="chartsBx">
-                    <div class="chart11">  
-                        <div class="user1">
-                            <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
-                        </div>
-                        <h2 class="Avatar">Avatar Admin</h2>
-                    </div>
-                    <div class="chart">  
-                        <form th:action="@{/profileAdmin}" th:object="${logoutForm}" method="POST" class="ge">
-
-                            Full Name<input type="text" id="FullName" name="FullName" th:value="${user.userName}" required="" class="gege"/>
-
-                            </br> Role ID<input type="text" id="roleID" name="roleID" th:value="${user.roleId}" readonly="" class="gege"/>
-
-                            </br> User ID<input type="text" id="userID" name="userID" th:value="${user.userID}" required="" class="gege"/>
-
-                            </br> Password<input type="text" id="PassWord" name="PassWord" th:value="${user.password}" required="" class="gege"/>
-
-                            </br> BirthDate<input type="date" class="gege" placeholder="" id="birthdate" name="birthdate" th:value="${user.birthdate}">
-
-                            </br> Description<textarea id="description" name="description" class="gege" th:text="${user.description}"></textarea>
-
-                            </br> <input type="submit" name="action" Value="Save Change" class="he"/>
-                            <input type="reset" value="Reset Change"/>
-                        </form>
-                    </div>
-                </div>
-
+        <div th:if="${session.user == null}">
+            <!-- Content visible only for non-authenticated users -->
+            <div class="bodyy">
+                <div class="emoji">😕</div>
+                <h1 class="wrong">Oops! Something went wrong.</h1>
+                <p>We're sorry, but an error has occurred.</p>
+                <p>Please try again later or contact support.</p>
+                <button class="button2"><a href="index.html" >Go Home</a></button>
             </div>
         </div>
+        <div th:if="${session.user != null}">
+            <!-- Content visible only for authenticated users -->
+            <!-- =============== Navigation ================ -->
+            <div class="container">
+                <div class="navigation">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <span class="icon">
+                                    <ion-icon name=""></ion-icon>
+                                </span>
+                                <span class="title">ADMIN DASHBOARD</span>
+                            </a>
+                        </li>
 
-        <!-- =========== Scripts =========  -->
-        <script th:src="@{/js/main_1.js}"></script>
-        <!-- ====== ionicons ======= -->
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
+                        <li>
+                            <a href="landingpage">
+                                <span class="icon">
+                                    <ion-icon name="people-outline"></ion-icon>
+                                </span>
+                                <span class="title">Member Management</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="landingsystem">
+                                <span class="icon">
+                                    <ion-icon name="help-outline"></ion-icon>
+                                </span>
+                                <span class="title">System Management</span>
+                            </a>
+                        </li>
+
+                        <!--                <li>
+                                            <a th:href="@{/homepage}">
+                                                <span class="icon">
+                                                    <ion-icon name="chatbubble-outline"></ion-icon>
+                                                </span>
+                                                <span class="title">HomePage</span>
+                                            </a>
+                                        </li>-->
+
+                        <!--                <li>
+                                            <a href="#">
+                                                <span class="icon">
+                                                    <ion-icon name="settings-outline"></ion-icon>
+                                                </span>
+                                                <span class="title">Settings</span>
+                                            </a>
+                                        </li>-->
+
+                        <li>
+                            <a href="#">
+                                <span class="icon">
+                                    <ion-icon name="lock-closed-outline"></ion-icon>
+                                </span>
+                                <span class="title">Security Profile</span>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="logout">
+                                <span class="icon">
+                                    <ion-icon name="log-out-outline"></ion-icon>
+                                </span>
+                                <span class="title">Sign Out</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="main">
+                    <div class="topbar">
+                        <div class="toggle">
+                            <ion-icon name="menu-outline"></ion-icon>
+                        </div>
+
+                        <div class="search">
+                            <label>
+                                <input type="text" placeholder="Search here">
+                                <ion-icon name="search-outline"></ion-icon>
+                            </label>
+                        </div>
+
+                        <div class="user">
+                            <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <!-- ======================= Title ======================== -->
+                    <div class="chartsBx1">
+                        <div></div>
+                        <div>
+                            <h1 class="chart">YOUR PROFILE</h1>
+                        </div>
+                        <div></div>
+                    </div>
+
+                    <!-- ================ View Profile Admin ================= -->
+                    <div class="chartsBx">
+                        <div class="chart11">  
+                            <div class="user1">
+                                <img src="https://foxnews.fpt.vn/wp-content/uploads/2022/09/kk-jpeg-8614-1662375872.jpg" alt="">
+                            </div>
+                            <h2 class="Avatar">Avatar Admin</h2>
+                        </div>
+                        <div class="chart">  
+                            <form th:action="@{/profileAdmin}" th:object="${logoutForm}" method="POST" class="ge">
+
+                                Full Name<input type="text" id="FullName" name="FullName" th:value="${user.userName}" required="" class="gege"/>
+
+                                </br> Role ID<input type="text" id="roleID" name="roleID" th:value="${user.roleId}" readonly="" class="gege"/>
+
+                                </br> User ID<input type="text" id="userID" name="userID" th:value="${user.userID}" required="" class="gege"/>
+
+                                </br> Password<input type="text" id="PassWord" name="PassWord" th:value="${user.password}" required="" class="gege"/>
+
+                                </br> BirthDate<input type="date" class="gege" placeholder="" id="birthdate" name="birthdate" th:value="${user.birthdate}">
+
+                                </br> Description<textarea id="description" name="description" class="gege" th:text="${user.description}"></textarea>
+
+                                </br> <input type="submit" name="action" Value="Save Change" class="he"/>
+                                <input type="reset" value="Reset Change"/>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- =========== Scripts =========  -->
+            <script th:src="@{/js/main_1.js}"></script>
+            <!-- ====== ionicons ======= -->
+            <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+            <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
+        </div>
     </body>
 </html>
